--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        sparse-checkout: 'mircoservice-1'
+        sparse-checkout: 'microservice-1'
     
     # - name: Set up Node.js
     #   uses: actions/setup-node@v4
