--- a/.github/workflows/ms1ci.yml
+++ b/.github/workflows/ms1ci.yml
@@ -17,16 +17,24 @@ jobs:
       with:
         sparse-checkout: 'microservice-1'
     
-    # - name: Set up Node.js
-    #   uses: actions/setup-node@v4
-    #   with:
-    #     node-version: '18'
-    #     cache: 'npm'
     - name: list
       run: ls -ltr
 
-  #   - name: Install dependencies
-  #     run: npm ci
+    - name: Install dependencies
+      uses: actions/setup-java@v4
+      with:
+        java-version: '21.0.6' # Specifies the exact Java version
+        distribution: 'microsoft'
+        cache: 'maven'
+    
+    - name: Build with Maven
+      run: mvn clean install
+    
+    - name: Run tests
+      run: mvn test
+    
+    - name: Run linting
+      run: mvn sonar:sonar
     
   #   - name: Run tests
   #     run: npm test
