--- a/.github/workflows/ms1ci.yml
+++ b/.github/workflows/ms1ci.yml
@@ -31,7 +31,9 @@ jobs:
         cache: 'maven'
     
     - name: Build with Maven
-      run: mvn clean install
+      run: |
+        cd microservice-1
+        mvn clean install
     
     - name: Run tests
       run: mvn test
