--- a/.github/workflows/ms2ci.yml
+++ b/.github/workflows/ms2ci.yml
@@ -40,4 +40,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: build-files
-        path: target/*.jar
+        path: microservice-2/target/*.jar
