--- a/.github/workflows/ms1ci.yml
+++ b/.github/workflows/ms1ci.yml
@@ -40,7 +40,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: build-files
-        path: target/*.jar
+        path: microservice-1/target/*.jar
     
     # - name: Run tests
     #   run: mvn test
